imported fonts and started working on navBar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Tieme-Ndo</title>
 </head>
 <body>
+    <header>
+        <img src="" alt="">
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#" id="about">About</a>
+            <a href="#" id="blog">Blog</a>
+            <a href="#" id="login">Login/SignUp</a>
+        </nav>
+    </header>
     
 </body>
 </html>
