finished basic navBar and started body

--- a/index.html
+++ b/index.html
@@ -5,17 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tieme-Ndo</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <header>
-        <img src="" alt="">
-        <nav>
-            <a href="#home">Home</a>
-            <a href="#" id="about">About</a>
-            <a href="#" id="blog">Blog</a>
-            <a href="#" id="login">Login/SignUp</a>
-        </nav>
+        <div class="navBar">
+            <div class="imgContainer">
+                <a href="#home"><img src="./img/cropped-tiem_logo-3.jpg" alt="tiem tree logo"></a>
+            </div>
+            <nav class ="navLinks">
+                <a href="#home">Home</a>
+                <a href="#" id="about">About</a>
+                <a href="#" id="blog">Blog</a>
+                <a href="#" id="login">Login/SignUp</a>
+            </nav>
+        </div>
     </header>
-    
+    <img src="img/Farming.jpg" alt="crop field" class="farmPic">
+    <div class="mission">
+        <h2>Our Promise</h2>
+        <p>
+            At Tieme Ndo, we promise every rural farmer convenient and timely access to improved farm inputs 
+            and technologies that double their farm productivity and income annually without capital requirements. 
+            It is a collaborative effort to achieve Zero Hunger! No Poverty! We deliver our promise with our 
+            innovative packages:
+        </p>
+    </div>
 </body>
 </html>
