working on the layout starting what we offer section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
                 <a href="#home">Home</a>
                 <a href="#" id="about">About</a>
                 <a href="#" id="blog">Blog</a>
-                <a href="#" id="login">Login/SignUp</a>
+                <a href="#" id="login">Login / Register
+                </a>
             </nav>
         </div>
     </header>
@@ -27,9 +28,32 @@
         <p>
             At Tieme Ndo, we promise every rural farmer convenient and timely access to improved farm inputs 
             and technologies that double their farm productivity and income annually without capital requirements. 
-            It is a collaborative effort to achieve Zero Hunger! No Poverty! We deliver our promise with our 
-            innovative packages:
+            It is a collaborative effort to achieve Zero Hunger! We Now offer online access to loans and Inventory.
+            Register now to view active loans and payment history.
         </p>
     </div>
+    <section class="packages">
+        <div class="threeRow">
+            <h2>What We Offer</h2>
+
+        </div>
+        <div class="twoRow">
+            <div class="staff">    
+                <h3>Staff</h3>
+                <p>
+                    Staff members have the ability to pull up clients and check loan status.
+                    Also Can see full and up to date info on the client to prevent missed payments 
+                    and gives them the ability to have a good client relationship.
+                </p>
+            </div>
+            <div class="client">
+                <h3>Client</h3>
+                <p>
+                    Clients can view their loans in real time and the inventory. You can see your payment history
+                    and and see how many payments you have left.
+                </p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
