--- a/index.html
+++ b/index.html
@@ -33,10 +33,39 @@
         </p>
     </div>
     <section class="packages">
-        <div class="threeRow">
             <h2>What We Offer</h2>
-
+        <div class="threeRow">
+            <div class="sad">
+                <h3>SAD</h3>
+                <p>
+                        In the bid to transform smallholder farmers into semi-commercial farmers and agripreneurs, 
+                        Tieme Ndo empower farmers to take advantage of business opportunities along the agricultural 
+                        value chain through SAD (Small Agribusiness Development). The aim of SAD is to train farmers on 
+                        entrepreneurship and value addition.
+                </p>
+            </div>
+            <div class="credit">
+                <h3>Credit Extension Package</h3>
+                <p>
+                    CEP is our innovative package that eliminates the capital constraints limiting farmers ability to 
+                    increase crop productivity and the adoption of improved farm technologies. With our CEP, farmers access 
+                    fertilizers and seeds when they most need it at their convenience. They receive training and field extension 
+                    to enforce appropriate usage of inputs and implementation of good agricultural practices. Without markets, 
+                    farmers are less motivated to increase production – linking farmers to favorable markets is our topmost priority.
+                </p>
+            </div>
+            <div class="cord">
+                <h3>CoRD</h3>
+                <p>
+                    “CoRD” (Commission on Repayments Deposit) is our unique incentive scheme that allows farmers to earn points 
+                    for paying off their loan. For every minimum amount (GHC6.00) a farmer deposits with Tieme Ndo to offset the 
+                    cost of their inputs, the farmer earns a point, which is credited to the farmer’s account. These points therefore 
+                    allows the farmer to purchase extra farm inputs at no cost to the farmer. This incentive scheme is best described 
+                    as “earn as you pay”, which is expected to reduce our default rate from 15% to 0% by end of April, 2020.
+                </p>
+            </div>
         </div>
+        <h2>Information</h2>
         <div class="twoRow">
             <div class="staff">    
                 <h3>Staff</h3>
