touched up landing page

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
             <nav class ="navLinks">
                 <a href="#home">Home</a>
                 <a href="#" id="about">About</a>
-                <a href="#" id="blog">Blog</a>
-                <a href="#" id="login">Login / Register
-                </a>
+                <a href="#" id="contact">Contact</a>
+                <a href="#" id="login">Login / Register</a>
             </nav>
         </div>
     </header>
@@ -26,42 +25,34 @@
     <div class="mission">
         <h2>Our Promise</h2>
         <p>
-            At Tieme Ndo, we promise every rural farmer convenient and timely access to improved farm inputs 
-            and technologies that double their farm productivity and income annually without capital requirements. 
-            It is a collaborative effort to achieve Zero Hunger! We Now offer online access to loans and Inventory.
-            Register now to view active loans and payment history.
+            To deliver a product worthy of the farmers that we partner with! We ensure quality customer service and Real time
+            tracking of your loans and inventory.
         </p>
     </div>
     <section class="packages">
             <h2>What We Offer</h2>
         <div class="threeRow">
             <div class="sad">
-                <h3>SAD</h3>
+                <h3>Real Time Tracking</h3>
                 <p>
-                        In the bid to transform smallholder farmers into semi-commercial farmers and agripreneurs, 
-                        Tieme Ndo empower farmers to take advantage of business opportunities along the agricultural 
-                        value chain through SAD (Small Agribusiness Development). The aim of SAD is to train farmers on 
-                        entrepreneurship and value addition.
+                    Convenience and confirmation is a great start when it comes to innovation. With our app you can track
+                    all of your progress in real time. This includes your loans, payment history, missed payments and Inventory.
+                    You can also see when your next payment due date is.
                 </p>
             </div>
             <div class="credit">
-                <h3>Credit Extension Package</h3>
+                <h3>Accuracy</h3>
                 <p>
-                    CEP is our innovative package that eliminates the capital constraints limiting farmers ability to 
-                    increase crop productivity and the adoption of improved farm technologies. With our CEP, farmers access 
-                    fertilizers and seeds when they most need it at their convenience. They receive training and field extension 
-                    to enforce appropriate usage of inputs and implementation of good agricultural practices. Without markets, 
-                    farmers are less motivated to increase production – linking farmers to favorable markets is our topmost priority.
+                    We Provide up-to-date information on your loans. Everything from start date to end date, how much inventory has
+                    been harvested and how much is planned to be sold.
                 </p>
             </div>
             <div class="cord">
-                <h3>CoRD</h3>
+                <h3>Client</h3>
                 <p>
-                    “CoRD” (Commission on Repayments Deposit) is our unique incentive scheme that allows farmers to earn points 
-                    for paying off their loan. For every minimum amount (GHC6.00) a farmer deposits with Tieme Ndo to offset the 
-                    cost of their inputs, the farmer earns a point, which is credited to the farmer’s account. These points therefore 
-                    allows the farmer to purchase extra farm inputs at no cost to the farmer. This incentive scheme is best described 
-                    as “earn as you pay”, which is expected to reduce our default rate from 15% to 0% by end of April, 2020.
+                    Staff have the ability to view all the information to ensure data is accurate and to expedite speedy service 
+                    to the client. You can pull up all information including, loan amount, loan time, village, and inventory. All 
+                    of this information in one convenient location.
                 </p>
             </div>
         </div>
