added login button at the bottom of the page

--- a/index.html
+++ b/index.html
@@ -75,5 +75,11 @@
             </div>
         </div>
     </section>
+    <div class="button">
+        <a href="#">Login</a>
+    </div>
+    <footer class="footer">
+        copyright 2019
+    </footer>
 </body>
 </html>
