--- a/index.html
+++ b/index.html
@@ -79,7 +79,15 @@
         <a href="#">Login</a>
     </div>
     <footer class="footer">
-        copyright 2019
+        <nav class ="navLinks">
+            <a href="#home">Home</a>
+            <a href="#" id="about">About</a>
+            <a href="#" id="contact">Contact</a>
+            <a href="#" id="login">Login / Register</a>
+        </nav>
+        <div> 
+            copyright 2019
+        </div>  
     </footer>
 </body>
 </html>
