finished making pages fully responsive

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                 <a href="#home"><img src="./img/cropped-tiem_logo-3.jpg" alt="tiem tree logo"></a>
             </div>
             <nav class ="navLinks">
-                <a href="#home">Home</a>
-                <a href="#" id="about">About</a>
+                <a href="index.html">Home</a>
+                <a href="about.html" id="about">About</a>
                 <a href="#" id="contact">Contact</a>
                 <a href="#" id="login">Login / Register</a>
             </nav>
