changed boxes on landing page

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
                 </p>
             </div>
             <div class="cord">
-                <h3>Client</h3>
+                <h3>Quality</h3>
                 <p>
-                    Staff have the ability to view all the information to ensure data is accurate and to expedite speedy service 
-                    to the client. You can pull up all information including, loan amount, loan time, village, and inventory. All 
-                    of this information in one convenient location.
+                    We have a top of the line time in charge of delivering you the best product on the market.
+                    Working everyday to give the staff and clientelle the best experience. Modernizing farming
+                    one step at a time.
                 </p>
             </div>
         </div>
@@ -69,8 +69,8 @@
             <div class="client">
                 <h3>Client</h3>
                 <p>
-                    Clients can view their loans in real time and the inventory. You can see your payment history
-                    and and see how many payments you have left.
+                    Full Access to everything the staff can see. Full immersion and the ability to follow
+                    along in the entire loan process.
                 </p>
             </div>
         </div>
