--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
                 <a href="index.html">Home</a>
                 <a href="about.html" id="about">About</a>
                 <a href="#" id="contact">Contact</a>
-                <a href="#" id="login">Login / Register</a>
+                <a href="https://tieme-ndo-app.netlify.com/" id="login">Login / Register</a>
             </nav>
         </div>
     </header>
@@ -63,7 +63,7 @@
                 <a href="index.html">Home</a>
                 <a href="about.html" id="about">About</a>
                 <a href="#" id="contact">Contact</a>
-                <a href="#" id="login">Login / Register</a>
+                <a href="https://tieme-ndo-app.netlify.com/" id="login">Login / Register</a>
             </nav>
             <div> 
                 copyright 2019
